--- a/style.css
+++ b/style.css
@@ -1,20 +1,43 @@
-.navigation {
+
+.container{
+  display: flex;
+  flex-direction: row;
+}
+
+.sideBar {
   display: flex;
   flex-direction: column;
-  width: 20%
+  width: 20%;
+  border: 1px solid red;
+}
+
+.main{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
+  border: 1px solid red;
 }
 
 .top{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
+  border: 1px solid red;
 }
 
 .center{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  border: 1px solid red;
 }
+
+table{
+  margin: auto;
+}
+
+
 body{
   background-image: url("images/chalkboard-background.jpeg");
   background-attachment: fixed;
