--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   width: 20%;
 }
 
-.additional-options, .center, .main{
+.additional-options, .center, .numberExercises{
   display: flex;
   flex-direction: column;
 }
@@ -33,7 +33,7 @@ input[type="range"]{
   justify-content: center;
 }
 
-.main{
+.numberExercises{
   width: 80%;
 }
 
